syntax = "proto3";

package airbooking.bookings_api;

import "google/api/annotations.proto";
import "models/booking.proto";

option go_package = "github.com/Domenick1991/airbooking/internal/pb/bookings_api;bookings_api";

service BookingsService {
  rpc CreateBooking(CreateBookingRequest) returns (airbooking.models.Booking) {
    option (google.api.http) = {
      post: "/api/v1/bookings"
      body: "*"
    };
  }

  rpc ConfirmBooking(BookingTokenRequest) returns (airbooking.models.Booking) {
    option (google.api.http) = {
      put: "/api/v1/bookings/{token}"
      body: "*"
    };
  }

  rpc CancelBooking(BookingTokenRequest) returns (airbooking.models.Booking) {
    option (google.api.http) = {
      delete: "/api/v1/bookings/{token}"
    };
  }
}

message CreateBookingRequest {
  int64 flight_id = 1;
  int32 seat_number = 2;
  string email = 3;
}

message BookingTokenRequest {
  string token = 1;
}
